testsuite/tests/rename/should_fail/T22478b.stderr
T22478b.hs:16:18: error: [GHC-10498]
    • Conflicting definitions for ‘k’
      Bound at: T22478b.hs:16:18-32
                T22478b.hs:16:31
    • In an equation for ‘fOutOfOrder’

T22478b.hs:18:14: error: [GHC-18932]
    • Unexpected strictness annotation: Int
      strictness annotation cannot appear nested inside a type
    • In a type argument in a pattern

T22478b.hs:21:54: error: [GHC-76037]
    Not in scope: type variable ‘a’

T22478b.hs:23:16: error: [GHC-89246]
    • Record syntax is illegal here: {fld :: Int}
    • In a type argument in a pattern

T22478b.hs:25:21: error: [GHC-10498]
    • Conflicting definitions for ‘a’
      Bound at: T22478b.hs:25:21
                T22478b.hs:25:23
    • In an equation for ‘fConflict1’

T22478b.hs:26:13: error: [GHC-10498]
    • Conflicting definitions for ‘a’
      Bound at: T22478b.hs:26:13-18
                T22478b.hs:26:27
    • In an equation for ‘fConflict2’

T22478b.hs:27:18: error: [GHC-10498]
    • Conflicting definitions for ‘a’
      Bound at: T22478b.hs:27:18
                T22478b.hs:27:27
    • In an equation for ‘fConflict3’

T22478b.hs:28:18: error: [GHC-10498]
    • Conflicting definitions for ‘a’
      Bound at: T22478b.hs:28:18
                T22478b.hs:28:21
    • In an equation for ‘fConflict4’

T22478b.hs:29:18: error: [GHC-10498]
    • Conflicting definitions for ‘_a’
      Bound at: T22478b.hs:29:18-19
                T22478b.hs:29:22-23
    • In an equation for ‘fConflict5’

